Bug #35847: Add functionality to change user passwords in the UMC server core * update the cached LDAP password in UDM on password change * hide the UDM users/self module by default, rename it into 'User settings' * Add a UMC module which adds a menu entry for password changes * Add the module to the UMC dependencies
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54983 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-passwordchange/debian/rules
+++ b/management/univention-management-console-module-passwordchange/debian/rules
@@ -1,9 +1,9 @@
-# -*- coding: utf-8 -*-
+#!/usr/bin/make -f
 #
-# Univention Admin Modules
-#  admin module for the user himself
+# Univention Management Console Module
+#  rules file for the debian package
 #
-# Copyright 2004-2014 Univention GmbH
+# Copyright 2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -30,33 +30,16 @@
 # /usr/share/common-licenses/AGPL-3; if not, see
 # <http://www.gnu.org/licenses/>.
 
-from univention.admin.layout import Tab
-import univention.admin.handlers
-import univention.admin.localization
+%:
+	dh $@ --with 'python_support'
 
-import univention.admin.handlers.users.user as udm_user
+override_dh_auto_test:
+	ucslint
 
-translation=univention.admin.localization.translation('univention.admin.handlers.users')
-_ = translation.translate
+override_dh_auto_build:
+	dh-umc-module-build
+	dh_auto_build
 
-module = 'users/self'
-operations = ['edit','search']
-options = {}
-
-mapping = udm_user.mapping
-
-property_descriptions = {
-}
-
-layout = [Tab(_('General'), layout=[])]
-
-uid_umlauts = 0
-childs = 0
-short_description = _('User: Self')
-long_description = ''
-
-class object(univention.admin.handlers.users.user.object):
-	module=module
-
-	def __init__(self, co, lo, position, dn='', superordinate=None, attributes=[]):
-		univention.admin.handlers.users.user.object.__init__(self, co, lo, position, dn, superordinate, attributes)
+override_dh_auto_install:
+	dh-umc-module-install
+	dh_auto_install
