--- a/management/univention-management-console/debian/control
+++ b/management/univention-management-console/debian/control
@@ -31,6 +31,7 @@ Depends: ${misc:Depends},
  univention-management-console-module-appcenter,
  univention-management-console-module-apps,
  univention-management-console-module-diagnostic,
+ univention-management-console-module-passwordchange,
 Recommends:
  univention-management-console-module-quota
 Description: UCS Management Console - Web based computer administration tool
