* Depend on python-psutil instead of python-psutils (Bug #36108)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54984 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/control
+++ b/test/ucs-test/debian/control
@@ -28,7 +28,7 @@ Depends: univention-config,
  python-yaml,
  python-argparse,
  python-ldap,
- python-psutils,
+ python-psutil,
  ucs-test-modules-all | ucs-test-module,
  dpkg-dev,
  debhelper,
