* Bug #36095: added unzip, sed to build dependencies
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55002 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/control
+++ b/services/univention-apache/debian/control
@@ -7,7 +7,9 @@ Build-Depends: debhelper (>= 7.0.50~),
  ucslint-univention,
  univention-dojo-dev,
  univention-management-console-dev,
- stylus
+ stylus,
+ unzip,
+ sed
 Standards-Version: 3.8.2
 
 Package: univention-apache
