* Bug #36095: adjust handling of translation resources
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55035 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/Makefile
+++ b/services/univention-apache/Makefile
@@ -40,7 +40,7 @@ jsFiles:=$(shell find umc -name "*.js")
 
 build: l10n $(buildDir) i18n
 
-build-dev: $(buildCssDir) $(buildBootstrap) i18n
+build-dev: l10n $(buildCssDir) $(buildBootstrap) i18n
 	mkdir -p build $(buildJsDir)
 	cp -r www build
 	# symlink UCS javascript code
