* Package update for UCS 4.0 (Bug #35889)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55050 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-radius/debian/control
+++ b/services/univention-radius/debian/control
@@ -3,6 +3,7 @@ Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper, univention-config-dev, ucslint
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-radius
 Architecture: any
